# cropper

./: CMakeLists.txt  toolchain.cmake
include/: cropper.h
src/: cropper.cpp  cropper.h
test/: main.cpp  old-main.cpp
